[tool.poetry]
name = "nonebot-plugin-disconnect-notice"
version = "0.1.0"
description = "QQbot断连时的通知插件"
authors = ["cypas <ayano05@outlook.com>"]
readme = "README.md"
packages = [{include = "nonebot_plugin_disconnect_notice"}]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2="^2.0.0"
nonebot-adapter-onebot = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
